@@ -22,6 +22,8 @@ XXXX-XX-XX the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 		- Fix memory leakage for notes with probability < 1.0.
 		- Fix incoming MIDI NOTE OFF handling.
 		- AppImage build dir is now removed on `build.sh r` (#2129).
+		- Fix potential crash with JACK audio driver on startup, teardown, or
+			song/drumkit loading.
 
 2024-12-07 the hydrogen team <hydrogen-devel@lists.sourceforge.net>
 	* Release 1.2.4
